// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CanvasControls should match snapshot 1`] = `
<div>
  <div
    class="bg-black/20 backdrop-blur-xl border border-white/10 rounded-2xl p-2 flex flex-col gap-1"
  >
    <button
      class="p-3 hover:bg-white/20 disabled:opacity-40 disabled:cursor-not-allowed transition-all rounded-xl"
      title="Undo (Ctrl+Z)"
    >
      <svg
        fill="currentColor"
        height="20"
        stroke="currentColor"
        stroke-width="0"
        style="color: rgb(146, 155, 201);"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M12.5 8c-2.65 0-5.05.99-6.9 2.6L2 7v9h9l-3.62-3.62c1.39-1.16 3.16-1.88 5.12-1.88 3.54 0 6.55 2.31 7.6 5.5l2.37-.78C21.08 11.03 17.15 8 12.5 8z"
        />
      </svg>
    </button>
    <button
      class="p-3 hover:bg-white/20 disabled:opacity-40 disabled:cursor-not-allowed transition-all rounded-xl"
      title="Redo (Ctrl+Y)"
    >
      <svg
        fill="currentColor"
        height="20"
        stroke="currentColor"
        stroke-width="0"
        style="color: rgb(146, 155, 201);"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M18.4 10.6C16.55 8.99 14.15 8 11.5 8c-4.65 0-8.58 3.03-9.96 7.22L3.9 16a8.002 8.002 0 017.6-5.5c1.95 0 3.73.72 5.12 1.88L13 16h9V7l-3.6 3.6z"
        />
      </svg>
    </button>
    <div
      class="h-px bg-white/10 my-1"
    />
    <button
      class="p-3 hover:bg-white/20 transition-all rounded-xl"
      title="Zoom In"
    >
      <svg
        fill="currentColor"
        height="20"
        stroke="currentColor"
        stroke-width="0"
        style="color: rgb(146, 155, 201);"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
        />
      </svg>
    </button>
    <button
      class="p-3 hover:bg-white/20 transition-all rounded-xl"
      title="Zoom Out"
    >
      <svg
        fill="currentColor"
        height="20"
        stroke="currentColor"
        stroke-width="0"
        style="color: rgb(146, 155, 201);"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M19 13H5v-2h14v2z"
        />
      </svg>
    </button>
    <div
      class="h-px bg-white/10 my-1"
    />
    <button
      class="p-3 hover:bg-white/20 transition-all rounded-xl"
      title="Fullscreen"
    >
      <svg
        fill="currentColor"
        height="20"
        stroke="currentColor"
        stroke-width="0"
        style="color: rgb(146, 155, 201);"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M7 14H5v5h5v-2H7v-3zm-2-4h2V7h3V5H5v5zm12 7h-3v2h5v-5h-2v3zM14 5v2h3v3h2V5h-5z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`CanvasControls should match snapshot for guest 1`] = `
<div>
  <div
    class="bg-black/20 backdrop-blur-xl border border-white/10 rounded-2xl p-2 flex flex-col gap-1"
  >
    <button
      class="p-3 hover:bg-white/20 transition-all rounded-xl"
      title="Zoom In"
    >
      <svg
        fill="currentColor"
        height="20"
        stroke="currentColor"
        stroke-width="0"
        style="color: rgb(146, 155, 201);"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
        />
      </svg>
    </button>
    <button
      class="p-3 hover:bg-white/20 transition-all rounded-xl"
      title="Zoom Out"
    >
      <svg
        fill="currentColor"
        height="20"
        stroke="currentColor"
        stroke-width="0"
        style="color: rgb(146, 155, 201);"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M19 13H5v-2h14v2z"
        />
      </svg>
    </button>
    <div
      class="h-px bg-white/10 my-1"
    />
    <button
      class="p-3 hover:bg-white/20 transition-all rounded-xl"
      title="Fullscreen"
    >
      <svg
        fill="currentColor"
        height="20"
        stroke="currentColor"
        stroke-width="0"
        style="color: rgb(146, 155, 201);"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M7 14H5v5h5v-2H7v-3zm-2-4h2V7h3V5H5v5zm12 7h-3v2h5v-5h-2v3zM14 5v2h3v3h2V5h-5z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`CanvasControls should match snapshot in fullscreen 1`] = `
<div>
  <div
    class="bg-black/20 backdrop-blur-xl border border-white/10 rounded-2xl p-2 flex flex-col gap-1"
  >
    <button
      class="p-3 hover:bg-white/20 disabled:opacity-40 disabled:cursor-not-allowed transition-all rounded-xl"
      disabled=""
      title="Undo (Ctrl+Z)"
    >
      <svg
        fill="currentColor"
        height="20"
        stroke="currentColor"
        stroke-width="0"
        style="color: rgb(146, 155, 201);"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M12.5 8c-2.65 0-5.05.99-6.9 2.6L2 7v9h9l-3.62-3.62c1.39-1.16 3.16-1.88 5.12-1.88 3.54 0 6.55 2.31 7.6 5.5l2.37-.78C21.08 11.03 17.15 8 12.5 8z"
        />
      </svg>
    </button>
    <button
      class="p-3 hover:bg-white/20 disabled:opacity-40 disabled:cursor-not-allowed transition-all rounded-xl"
      title="Redo (Ctrl+Y)"
    >
      <svg
        fill="currentColor"
        height="20"
        stroke="currentColor"
        stroke-width="0"
        style="color: rgb(146, 155, 201);"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M18.4 10.6C16.55 8.99 14.15 8 11.5 8c-4.65 0-8.58 3.03-9.96 7.22L3.9 16a8.002 8.002 0 017.6-5.5c1.95 0 3.73.72 5.12 1.88L13 16h9V7l-3.6 3.6z"
        />
      </svg>
    </button>
    <div
      class="h-px bg-white/10 my-1"
    />
    <button
      class="p-3 hover:bg-white/20 transition-all rounded-xl"
      title="Zoom In"
    >
      <svg
        fill="currentColor"
        height="20"
        stroke="currentColor"
        stroke-width="0"
        style="color: rgb(146, 155, 201);"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
        />
      </svg>
    </button>
    <button
      class="p-3 hover:bg-white/20 transition-all rounded-xl"
      title="Zoom Out"
    >
      <svg
        fill="currentColor"
        height="20"
        stroke="currentColor"
        stroke-width="0"
        style="color: rgb(146, 155, 201);"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M19 13H5v-2h14v2z"
        />
      </svg>
    </button>
    <div
      class="h-px bg-white/10 my-1"
    />
    <button
      class="p-3 hover:bg-white/20 transition-all rounded-xl"
      title="Exit Fullscreen"
    >
      <svg
        fill="currentColor"
        height="20"
        stroke="currentColor"
        stroke-width="0"
        style="color: rgb(146, 155, 201);"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M5 16h3v3h2v-5H5v2zm3-8H5v2h5V5H8v3zm6 11h2v-3h3v-2h-5v5zm2-11V5h-2v5h5V8h-3z"
        />
      </svg>
    </button>
  </div>
</div>
`;
